--- a/Huffman/Huffman.csproj
+++ b/Huffman/Huffman.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BetterConsoleTables" Version="2.0.4-rc1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.2.23128.3" />
     </ItemGroup>
 
